[package]
name = "STXTool"
description = "UI application to work with STX files."
version = "0.2.5"
authors = ["Aldo Fregoso <aldomx@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libamx = { git = "ssh://git@github.com/StepMania-AMX/libamx.git" }
libui = { git = "https://github.com/libui-rs/libui" }
num-traits = "0.2.19"
screen_size = "0.1.0"
statistical = "1.0.0"
strum = { version = "0.26.3", features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
dbus = "0.9.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = ["NSArray", "NSObject"] }
objc2-app-kit = { version = "0.2.2", features = ["NSAppearance", "NSApplication", "NSResponder"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"
